Fixed str1200RPM case

--- a/tutorials_13/STR_1200RPM/0.org/H2O.liquid
+++ b/tutorials_13/STR_1200RPM/0.org/H2O.liquid
@@ -17,6 +17,20 @@ FoamFile
 dimensions      [];
 
 internalField   uniform 1; 
+
+sources
+{
+    massSource2
+    {
+        type            uniformFixedValue;
+        uniformValue    
+        {
+            type            constant;
+            value           0.25;
+        }
+    }
+}
+
 boundaryField
 {
     outlet
