--- a/tutorials_13/STR_1200RPM/0.org/alpha.liquid
+++ b/tutorials_13/STR_1200RPM/0.org/alpha.liquid
@@ -18,6 +18,20 @@ dimensions      [];
 
 internalField  uniform 0;
 
+sources
+{
+    massSource2
+    {
+        type            uniformFixedValue;
+        uniformValue    
+        {
+            type            constant;
+            value           1;
+        }
+    }
+}
+
+
 boundaryField
 {
     outlet
