--- a/tutorials_13/STR_1200RPM/0.org/T.liquid
+++ b/tutorials_13/STR_1200RPM/0.org/T.liquid
@@ -18,6 +18,20 @@ dimensions      [0 0 0 1 0 0 0];
 
 internalField   uniform 293.15;
 
+sources
+{
+    massSource2
+    {
+        type            uniformFixedValue;
+        uniformValue    
+        {
+            type            constant;
+            value           293.15;
+        }
+    }
+}
+
+
 boundaryField
 {
     outlet
