--- a/tutorials_13/STR_1200RPM/0.org/U.liquid
+++ b/tutorials_13/STR_1200RPM/0.org/U.liquid
@@ -18,6 +18,20 @@ dimensions      [0 1 -1 0 0 0 0];
 
 internalField   uniform (0 0 0);
 
+sources
+{
+    massSource2
+    {
+        type            uniformFixedValue;
+        uniformValue    
+        {
+            type            constant;
+            value           (0 0 0);
+        }
+    }
+}
+
+
 boundaryField
 {
     outlet
